@@ -6,7 +6,8 @@ Add window title setting to input windows (mainly useful for scripts)
 Add IWindowMain::GetSpawnTabs and IWindowMain::GetInput to allow scripts to do actions on spawn tab switching
 Add IAlias and IAliases and Aliases properties where Triggers also are in scripts
 Changed restore logs so that spawn triggers will only add to existing windows/tabs vs creating new ones
-Add 'Lock Window Layouts' to the General settings to prevent docked windows from undocking or moving
+Add 'Changing layout requires holding down Control' to the General settings
+Add 'Show connect/disconnect in spawn windows' option in Networking settings
 
 4.00.328 - 2024-11-18
 
